--- a/{{cookiecutter.project_slug}}/modules/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/modules/{{cookiecutter.project_slug}}/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@modules/{{cookiecutter.project_slug}",
+    "name": "@modules/{{cookiecutter.project_slug}}",
     "version": "1.0.1",
-    "description": "{{cookiecutter.project_title}}",
+    "description": "{{cookiecutter.project_name}}",
     "private": true,
     "main": "index.js",
     "author": "Crowdbotics",
